unpackaged/main/default/objects/Cookie__c/Cookie__c.object-meta.xml
<CustomObject>
    <label>Cookie</label>
    <nameField>
        <label>Cookie Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cookies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>