unpackaged/main/default/objects/Cookie__c/fields/CookieConsentCategory__c.field-meta.xml
<CustomField>
    <fullName>CookieConsentCategory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The parent category for the cookie.</description>
    <label>Cookie Consent Category</label>
    <referenceTo>CookieConsentCategory__c</referenceTo>
    <relationshipLabel>Cookies</relationshipLabel>
    <relationshipName>Cookies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>