unpackaged/main/default/objects/Cookie__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The description of the cookie</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>