unpackaged/main/default/objects/Cookie__c/fields/Duree__c.field-meta.xml
<CustomField>
    <fullName>Duree__c</fullName>
    <label>Durée</label>
    <length>255</length>
    <type>Text</type>
</CustomField>