unpackaged/main/default/objects/Cookie__c/fields/Obligatoire__c.field-meta.xml
<CustomField>
    <fullName>Obligatoire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obligatoire</label>
    <type>Checkbox</type>
</CustomField>