unpackaged/main/default/objects/Cookie__c/fields/Type_de_Cookie__c.field-meta.xml
<CustomField>
    <fullName>Type_de_Cookie__c</fullName>
    <label>Type de Cookie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>