unpackaged/main/default/objects/Cookie__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CookieConsentCategory__c</columns>
    <columns>Description__c</columns>
    <columns>Type_de_Cookie__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>